--- a/index.ipynb
+++ b/index.ipynb
@@ -61,13 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
     "import json\n",
-    "f = open('ny_times_movies.json')"
+    "f = open('ny_times_movies.json', 'r')\n",
+    "data = json.load(f)"
    ]
   },
   {
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
