automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -259,12 +259,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['A.O. SCOTT', 'BEN KENIGSBERG', 'GLENN KENNY', 'A. O. SCOTT',\n",
+       "       'JEANNETTE CATSOULIS', 'MANOHLA DARGIS', 'KEN JAWOROWSKI',\n",
+       "       'TEO BUGBEE'], dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code here\n",
-    "df.criti"
+    "df.byline.unique()"
    ]
   },
   {
