--- a/index.ipynb
+++ b/index.ipynb
@@ -259,25 +259,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['A.O. SCOTT', 'BEN KENIGSBERG', 'GLENN KENNY', 'A. O. SCOTT',\n",
-       "       'JEANNETTE CATSOULIS', 'MANOHLA DARGIS', 'KEN JAWOROWSKI',\n",
-       "       'TEO BUGBEE'], dtype=object)"
+       "8"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "df.byline.unique()"
+    "df.byline.nunique()"
    ]
   },
   {
@@ -293,7 +291,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "df"
    ]
   },
   {
