automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -287,12 +287,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'type': 'article',\n",
+       " 'url': 'http://www.nytimes.com/2018/10/16/movies/horn-from-the-heart-review-paul-butterfield.html',\n",
+       " 'suggested_link_text': 'Read the New York Times Review of Horn from the Heart: The Paul Butterfield Story'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code here\n",
-    "df['review_url'] = df[]"
+    "df['link'][2]"
    ]
   },
   {
