automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -287,25 +287,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'type': 'article',\n",
-       " 'url': 'http://www.nytimes.com/2018/10/16/movies/horn-from-the-heart-review-paul-butterfield.html',\n",
-       " 'suggested_link_text': 'Read the New York Times Review of Horn from the Heart: The Paul Butterfield Story'}"
+       "dict_keys(['type', 'url', 'suggested_link_text'])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "df."
+    "df.link.iloc[0].keys()"
    ]
   },
   {
