automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -287,6 +287,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -303,7 +312,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "df.link.iloc[0].keys()"
+    "keys = df.link.iloc[0].keys()"
    ]
   },
   {
