--- a/index.ipynb
+++ b/index.ipynb
@@ -287,12 +287,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['type', 'url', 'suggested_link_text'])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.link.iloc[0].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -312,7 +330,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "keys = df.link.iloc[0].keys()"
+    "keys = df.link.iloc[0].keys()\n"
    ]
   },
   {
