automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -332,7 +332,9 @@
    ],
    "source": [
     "#Your code here\n",
-    "keys = df.link.iloc[0].keys()\n"
+    "keys = df.link.iloc[0].keys()\n",
+    "review_url = []\n",
+    "fo"
    ]
   },
   {
