automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -334,7 +334,8 @@
     "#Your code here\n",
     "keys = df.link.iloc[0].keys()\n",
     "review_url = []\n",
-    "fo"
+    "for key in keys:\n",
+    "    "
    ]
   },
   {
