automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -335,7 +335,7 @@
     "keys = df.link.iloc[0].keys()\n",
     "review_url = []\n",
     "for key in keys:\n",
-    "    "
+    "    review = ''"
    ]
   },
   {
