--- a/index.ipynb
+++ b/index.ipynb
@@ -335,7 +335,8 @@
     "keys = df.link.iloc[0].keys()\n",
     "review_url = []\n",
     "for key in keys:\n",
-    "    review = ''"
+    "    if key == 'url':\n",
+    "        "
    ]
   },
   {
