automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -336,7 +336,7 @@
     "review_url = []\n",
     "for key in keys:\n",
     "    if key == 'url':\n",
-    "        "
+    "        review = 'headline_{}'.format(key)"
    ]
   },
   {
