automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -336,7 +336,8 @@
     "review_url = []\n",
     "for key in keys:\n",
     "    if key == 'url':\n",
-    "        review = 'headline_{}'.format(key)"
+    "        review = 'review_{}'.format(key)\n",
+    "    "
    ]
   },
   {
