automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -337,7 +337,7 @@
     "for key in keys:\n",
     "    if key == 'url':\n",
     "        review = 'review_{}'.format(key)\n",
-    "    "
+    "        df[new_col] = df.headline.map(lambda x: x[key])"
    ]
   },
   {
